LU-2102 llog: wrong handle was used for changelog processing

- Wrong llog handle was passed tp changelog_user_init_cb() for
  processing

Signed-off-by: Mikhail Pershin <tappro@whamcloud.com>
Change-Id: I3656829e283232ff8c17829e18df68b320e26f2f
Reviewed-on: http://review.whamcloud.com/4229
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>